Fixing Integer.valueOf
git-svn-id: https://pmd.svn.sourceforge.net/svnroot/pmd/trunk@4684 51baf565-9d33-0410-a72c-fc3788e3496d